ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cm
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    # traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - http:
      paths:
      - path: /Campus
        pathType: Prefix
        backend:
          service:
            name: cm-campusservice
            port:
              number: 80
      # - path: /
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: cm-campusservice
      #       port:
      #         number: 80
